--- a/extension/package.json
+++ b/extension/package.json
@@ -6,14 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
+    "copy-webpack-plugin": "^6.3.2",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "bash ./script/build.sh",
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.5.0"
   }
 }
