--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -9,5 +9,18 @@
     "browser_action": {
         "default_icon": "logo512.png",
         "default_popup": "popup.html"
-    }
+    },
+    "background" : {
+        "scripts" : ["background.bundle.js"],
+        "persistent": false
+    },
+    "permissions": [
+        "notifications",
+        "storage",
+        "tabs",
+        "*://*/*",
+        "http://*/",
+        "https://*/"
+    ],
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
